--- a/css/custom.css
+++ b/css/custom.css
@@ -215,7 +215,7 @@ footer.light-layout{
     color: #fff;
 }
 .address_area .form-check .form-check-input{
-    margin: 0 20px 0 0;
+    margin: 0 10px 0 0;
 }
 .pro-page-content .pro-page-tab ul.nav.nav-tabs li.nav-item a.nav-link.active{
     padding: 15px;
@@ -263,4 +263,7 @@ footer.light-layout{
 }
 .profile_area .profile{
     padding: 0;
+}
+.form-check-input[type=radio]{
+    padding: 7px;
 }
